fix collapse padding

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@ body {
 	padding: 15px 20px;
 }
 
+.nav > li > a {
+	padding: 10px 20px;
+}
+
 #footer {
    position:fixed;
    left:0px;
